Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7333

Keyboard shortcuts incorrectly fired in main-menu, when a QGraphicsTextItem has keyboard focus.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.7.0
    • 4.5.0, 4.5.1, 4.5.2, 4.5.3, 4.6.0
    • Widgets: GraphicsView
    • None
    • Mac 10.5.x and Mac 10.6.x
    • 495032429b400b44fdcc585585a5c7220c572c68

      When editing the contents of a QGraphicsTextItem, shortcut keys defined in the main menu (e.g. QMainWindow menu) will take priority over the QGraphicsTextItem.

      This causes a serious reduction in the editing capability of the text item.

      I've attached a demo app that shows the bug in action. The bug is easily seen when you:

      • run the app
      • double click the text item (it will go into edit mode)
      • hit ctrl-A to select all the text in the qgraphicstextitem, of course, you expect that all text will be highlighted
      • watch in horror as the main-menu item shortcut is fired instead of select-all within the text item

      If there is a known fix for this - I'd love to hear it.

      This is related to this:
      http://qt.nokia.com/developer/task-tracker/index_html?id=209762&method=entry

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ylopes Yoann Lopes
            johncclayton John Clayton
            Votes:
            1 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes