Fixes keyboard shortcuts for QGraphicsTextItem.

The event ShortcutOverride was not handled by QGraphicsTextItem.
Autotest included.

Task-number: QTBUG-7333
Reviewed-by: bnilsen